--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
         type: string
     steps:
       - run:
-          name: Deploy to S3
+          name: S3 Sync
           command: aws s3 sync << parameters.from >> << parameters.to >>
   invalidate_cloudfront:
     parameters:
@@ -25,7 +25,7 @@ commands:
         type: string
     steps:
       - run:
-          name: Invalidate CDN distribution
+          name: Invalidate Cloudfront distribution
           command: |
             aws configure set preview.cloudfront true
             aws cloudfront create-invalidation --distribution-id=<< parameters.distribution_id >> --paths=<< parameters.paths >>
