[Pulumi] use new backend s3://pulumi.tmcloud.io

--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "pulumi:up": "AWS_PROFILE=topmonks pulumi up --skip-preview",
     "pulumi:pre": "AWS_PROFILE=topmonks pulumi preview",
     "pulumi:refresh": "AWS_PROFILE=topmonks pulumi refresh",
-    "pulumi:fetch": "mkdir -p ~/.pulumi && aws s3 sync --profile=topmonks s3://topmonks-pulumi-state/ ~/.pulumi/",
-    "pulumi:push": "aws s3 sync --profile=topmonks ~/.pulumi/ s3://topmonks-pulumi-state/ --exclude plugins/* --exclude _plugins/* --exclude templates/* --exclude bin/* --exclude credentials.json",
+    "pulumi:login": "AWS_PROFILE=topmonks pulumi login --cloud-url s3://pulumi.tmcloud.io && AWS_PROFILE=topmonks pulumi stack select topmonks-webs",
     "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
     "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid -- build",
     "test:broken-links:www.topmonks.com": "blcl ./public/www.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude blog.topmonks.com",
