--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   pulumi: pulumi/pulumi@1.2.0
   aws-s3: circleci/aws-s3@1.0.12
+  aws-cli: circleci/aws-cli@0.1.19
 
 executors:
   aws_cli:
