--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,7 @@ jobs:
 
   deploy-www-topmonks-com:
     executor: aws-cli/default
+    working_directory: ~/topmonks-webs
     steps:
       - checkout
       - attach_workspace:
